[package]
name = "butcher_proc_macro"
version = "0.4.1"
authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macros for butcher"
repository = "https://github.com/scileo/butcher"
documentation = "https://docs.rs/butcher"
readme = "../README.md"
categories = []
keywords = ["rust-patterns"]


[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
